test/cases/x86_64-windows/hello_world_with_updates.0.zig
// error
// output_mode=Exe
// target=x86_64-windows
//
// :604:45: error: root struct of file 'tmp' has no member named 'main'
// :553:12: note: called from here
// :389:65: note: called from here
